tests/snapshots/run_process_command.snap
---
source: tests/cli.rs
expression: content
---
thread 'main' panicked at src\rules\inject_libraries.rs:80:14:
Project path is required
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
